Error mesg if not found

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,7 +9,7 @@ tasks:
   build:
     desc: build
     cmds:
-      - go build -o dist/switchaws main.go
+      - go build -o dist/switchaws main/main.go
     silent: false
 
   install:
